# ProyectoFinal_Galaga_enC

./: CMakeLists.txt  Galaga Proyecto Final.docx  main.c
interfaz/: Inte_color_fondo.c  Inte_color_fondo.h
juego/: juego.c  juego.h  libgalaga.c  libgalaga.h  main.c
menu/: Instruccion.c  Instruccion.h  como_jugar.c  como_jugar.h  menu.h
